<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ContactsFragment"
    android:id="@+id/fragment_contacts"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/account_button"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:elevation="2dp"
            android:src="@drawable/ic_twotone_account_circle_24"
            app:layout_constraintBottom_toBottomOf="@+id/account_button"
            app:layout_constraintStart_toStartOf="@+id/account_button"
            app:layout_constraintTop_toTopOf="@+id/account_button"
            android:contentDescription="@string/avatar_btn" />

        <ImageButton
            android:id="@+id/phone_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_sharp_local_phone_24"
            app:layout_constraintBottom_toBottomOf="@+id/account_button"
            app:layout_constraintEnd_toEndOf="@+id/account_button"
            app:layout_constraintTop_toTopOf="@+id/account_button"
            android:contentDescription="@string/phone_btn" />

        <TextView
            android:id="@+id/name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="16dp"
            android:elevation="2dp"
            android:fontFamily="@font/roboto"
            android:text="@string/contact_btn"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/account_button" />

        <TextView
            android:id="@+id/phone_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:elevation="2dp"
            android:fontFamily="@font/roboto"
            android:text="@string/number"
            android:textColor="#757575"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/account_button"
            app:layout_constraintStart_toStartOf="@+id/name_textView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>