<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.contacts.fragments.MainFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:background="@color/app_color"
            android:contentInsetLeft="0dp"
            android:contentInsetStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/search_view"
                app:queryHint="@string/search"
                app:iconifiedByDefault="false"
                android:layout_marginHorizontal="8dp"
                app:queryBackground="@android:color/transparent"

                />
        </com.google.android.material.appbar.MaterialToolbar>

        <FrameLayout
            android:id="@+id/cont_in_frag"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <TextView
                android:id="@+id/no_contacts_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_contacts"
                android:textSize="16sp"
                android:layout_gravity="center"
                />
        </FrameLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_contact"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/floating_btn"
            android:clickable="true"
            android:contentDescription="@string/adding_contacts"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_person_add_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
